[package]
name = "ses-suppression-list"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = { version = "1.1.10", features = ["behavior-version-latest"] }
aws-sdk-sesv2 = { version = "1.20.0", features = ["behavior-version-latest"] }
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
env_logger = "0.11.3"
log = "0.4.21"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
